--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Inloggen - Cigar Log</title>
+    <title>Inloggen - AshNote</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
